[workspace]
members = ["."]
default-members = ["."]

[package]
name = "grim-reaper"
version = "0.1.0"
authors = ["Momo Langenstein <momo.langenstein@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/MomoLangenstein/grim-reaper/"
exclude = ["/.github", "/.vscode", "/.fossa.yml", "/.gitpod.yml", "/rust-toolchain", "/rustfmt.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fork = "0.1"
libc = "0.2"
signal-hook = "0.3"

log = "0.4"
pretty_env_logger = "0.4"
