[package]
name = "cargo-reaper"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.langenstein@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pretty_env_logger = "0.4"
clap = { version = "4.2", features = ["derive"] }

lib-grim-reaper = { path = ".." }